--- a/fake-logs-producer/seqcli-dev/src/Roastery/Roastery.csproj
+++ b/fake-logs-producer/seqcli-dev/src/Roastery/Roastery.csproj
@@ -17,10 +17,7 @@
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-    </ItemGroup>
-    
-    <ItemGroup>
-      <ProjectReference Include="..\..\..\..\..\..\Work\Test\mongo-serilog\src\Serilog.Sinks.MongoDB\Serilog.Sinks.MongoDB.csproj" />
+        <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.1.1" />
     </ItemGroup>
 
 </Project>
